--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -26048,5 +26048,116 @@
         <target>Das neueste Geschwätz:</target>
       </segment>
     </unit>
+    <unit id="dAly6Ww" name="Wir werden alle sterben: Sag es weiter!">
+      <notes>
+        <note category="german">Wir werden alle sterben: Sag es weiter!</note>
+        <note category="from">twig:///templates/ajax/soul/refer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Wir werden alle sterben: Sag es weiter!</source>
+        <target>Wir werden alle sterben: Sag es weiter!</target>
+      </segment>
+    </unit>
+    <unit id="lX3GkoF" name="Revolution!">
+      <notes>
+        <note category="german">Revolution!</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Revolution!</source>
+        <target>Insurrection!</target>
+      </segment>
+    </unit>
+    <unit id="864jEAf">
+      <notes>
+        <note category="german">Vor dir siehst du die glimmenden Überreste einer Barrikade. In der Ferne ertöhnen Jubelschreie und Sirenenrufe.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Vor dir siehst du die glimmenden Überreste einer Barrikade. In der Ferne ertöhnen Jubelschreie und Sirenenrufe.</source>
+        <target>Before you lie the smoldering remains of a barricade. In the distance, cheers and siren calls resound.</target>
+      </segment>
+    </unit>
+    <unit id="FZfbNcs">
+      <notes>
+        <note category="german">Die Verbannten der Stadt wollten sich nicht länger unterdrücken lassen und haben eine Revolution angezettelt! Die bisherigen Anführer der Stadt wurden entmachtet und die Revolutionäre haben die Kontrolle übernommen.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Die Verbannten der Stadt wollten sich nicht länger unterdrücken lassen und haben eine Revolution angezettelt! Die bisherigen Anführer der Stadt wurden entmachtet und die Revolutionäre haben die Kontrolle übernommen.</source>
+        <target>The shunned of the city no longer wanted to be oppressed and have started a revolution! The previous leaders of the city have been ousted and the revolutionaries have taken control.</target>
+      </segment>
+    </unit>
+    <unit id=".TChYJ9" name="Du bist nun frei.">
+      <notes>
+        <note category="german">Du bist nun frei.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Du bist nun frei.</source>
+        <target>You are now free.</target>
+      </segment>
+    </unit>
+    <unit id="Tu_xrDM">
+      <notes>
+        <note category="german">Erlöst von den Fesseln der Verbannung kannst du nun zusammen mit den anderen Revolutionären das Schicksal der Stadt bestimmen.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Erlöst von den Fesseln der Verbannung kannst du nun zusammen mit den anderen Revolutionären das Schicksal der Stadt bestimmen.</source>
+        <target>Released from the shackles of banishment, you can now determine the fate of the city together with the other revolutionaries. </target>
+      </segment>
+    </unit>
+    <unit id="CTl4Y7q" name="Du bist nun verbannt.">
+      <notes>
+        <note category="german">Du bist nun verbannt.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Du bist nun verbannt.</source>
+        <target>You are now shunned.</target>
+      </segment>
+    </unit>
+    <unit id="jJbS7ew">
+      <notes>
+        <note category="german">Die Revolutionäre haben die Führung in der Stadt übernommen und die vormals freien Bürger erfahren nun selbst das bittere Schicksal der Verbannung.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Die Revolutionäre haben die Führung in der Stadt übernommen und die vormals freien Bürger erfahren nun selbst das bittere Schicksal der Verbannung.</source>
+        <target>The revolutionaries have taken control of the city and the formerly free citizens are now experiencing the bitter fate of banishment themselves.</target>
+      </segment>
+    </unit>
+    <unit id="NvYJXqK" name="Schau dir am besten gleich den {revolution_help} an.">
+      <notes>
+        <note category="german">Schau dir am besten gleich den {revolution_help} an.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Schau dir am besten gleich den {revolution_help} an.</source>
+        <target>It's best to take a look at the {revolution_help} right now.</target>
+      </segment>
+    </unit>
+    <unit id="WsdOdCK" name="Verbannten-Ratgeber">
+      <notes>
+        <note category="german">Verbannten-Ratgeber</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Verbannten-Ratgeber</source>
+        <target>Banishment Guide</target>
+      </segment>
+    </unit>
+    <unit id="6MOyLKz" name="Dort findest du alle Informationen über den Aufstand und dessen Folgen.">
+      <notes>
+        <note category="german">Dort findest du alle Informationen über den Aufstand und dessen Folgen.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+      </notes>
+      <segment>
+        <source>Dort findest du alle Informationen über den Aufstand und dessen Folgen.</source>
+        <target>There you will find all the information about this insurrection and its consequences.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
