--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -25955,5 +25955,126 @@
         <target>Das neueste Geschwätz:</target>
       </segment>
     </unit>
+    <unit id="dAly6Ww" name="Wir werden alle sterben: Sag es weiter!">
+      <notes>
+        <note category="german">Wir werden alle sterben: Sag es weiter!</note>
+        <note category="from">twig:///templates/ajax/soul/refer.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Wir werden alle sterben: Sag es weiter!</source>
+        <target>Wir werden alle sterben: Sag es weiter!</target>
+      </segment>
+    </unit>
+    <unit id="lX3GkoF" name="Revolution!">
+      <notes>
+        <note category="german">Revolution!</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Revolution!</source>
+        <target>Revolution!</target>
+      </segment>
+    </unit>
+    <unit id="864jEAf">
+      <notes>
+        <note category="german">Vor dir siehst du die glimmenden Überreste einer Barrikade. In der Ferne ertöhnen Jubelschreie und Sirenenrufe.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Vor dir siehst du die glimmenden Überreste einer Barrikade. In der Ferne ertöhnen Jubelschreie und Sirenenrufe.</source>
+        <target>Vor dir siehst du die glimmenden Überreste einer Barrikade. In der Ferne ertöhnen Jubelschreie und Sirenenrufe.</target>
+      </segment>
+    </unit>
+    <unit id="FZfbNcs">
+      <notes>
+        <note category="german">Die Verbannten der Stadt wollten sich nicht länger unterdrücken lassen und haben eine Revolution angezettelt! Die bisherigen Anführer der Stadt wurden entmachtet und die Revolutionäre haben die Kontrolle übernommen.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Die Verbannten der Stadt wollten sich nicht länger unterdrücken lassen und haben eine Revolution angezettelt! Die bisherigen Anführer der Stadt wurden entmachtet und die Revolutionäre haben die Kontrolle übernommen.</source>
+        <target>Die Verbannten der Stadt wollten sich nicht länger unterdrücken lassen und haben eine Revolution angezettelt! Die bisherigen Anführer der Stadt wurden entmachtet und die Revolutionäre haben die Kontrolle übernommen.</target>
+      </segment>
+    </unit>
+    <unit id=".TChYJ9" name="Du bist nun frei.">
+      <notes>
+        <note category="german">Du bist nun frei.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du bist nun frei.</source>
+        <target>Du bist nun frei.</target>
+      </segment>
+    </unit>
+    <unit id="Tu_xrDM">
+      <notes>
+        <note category="german">Erlöst von den Fesseln der Verbannung kannst du nun zusammen mit den anderen Revolutionären das Schicksal der Stadt bestimmen.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Erlöst von den Fesseln der Verbannung kannst du nun zusammen mit den anderen Revolutionären das Schicksal der Stadt bestimmen.</source>
+        <target>Erlöst von den Fesseln der Verbannung kannst du nun zusammen mit den anderen Revolutionären das Schicksal der Stadt bestimmen.</target>
+      </segment>
+    </unit>
+    <unit id="CTl4Y7q" name="Du bist nun verbannt.">
+      <notes>
+        <note category="german">Du bist nun verbannt.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Du bist nun verbannt.</source>
+        <target>Du bist nun verbannt.</target>
+      </segment>
+    </unit>
+    <unit id="jJbS7ew">
+      <notes>
+        <note category="german">Die Revolutionäre haben die Führung in der Stadt übernommen und die vormals freien Bürger erfahren nun selbst das bittere Schicksal der Verbannung.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Die Revolutionäre haben die Führung in der Stadt übernommen und die vormals freien Bürger erfahren nun selbst das bittere Schicksal der Verbannung.</source>
+        <target>Die Revolutionäre haben die Führung in der Stadt übernommen und die vormals freien Bürger erfahren nun selbst das bittere Schicksal der Verbannung.</target>
+      </segment>
+    </unit>
+    <unit id="NvYJXqK" name="Schau dir am besten gleich den {revolution_help} an.">
+      <notes>
+        <note category="german">Schau dir am besten gleich den {revolution_help} an.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Schau dir am besten gleich den {revolution_help} an.</source>
+        <target>Schau dir am besten gleich den {revolution_help} an.</target>
+      </segment>
+    </unit>
+    <unit id="WsdOdCK" name="Verbannten-Ratgeber">
+      <notes>
+        <note category="german">Verbannten-Ratgeber</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Verbannten-Ratgeber</source>
+        <target>Verbannten-Ratgeber</target>
+      </segment>
+    </unit>
+    <unit id="6MOyLKz" name="Dort findest du alle Informationen über den Aufstand und dessen Folgen.">
+      <notes>
+        <note category="german">Dort findest du alle Informationen über den Aufstand und dessen Folgen.</note>
+        <note category="from">twig:///templates/ajax/game/notifications/insurrection.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Dort findest du alle Informationen über den Aufstand und dessen Folgen.</source>
+        <target>Dort findest du alle Informationen über den Aufstand und dessen Folgen.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
